fix docs swago in car controller
